# daeplanner

./: .gitignore  README.md  dev_env.sh  experiments.yaml  run_experiment.py
aep_dep/: exploration.sh  save_octomap.sh
aep_dep/.ros/: roscore-11311.pid
aep_dep/.rviz/: persistent_settings
daep/: .bashrc  save_octomap.sh  simulation.sh  terminate.sh
daep/.ros/: collision_log.txt
daep/.rviz/: persistent_settings
daep/catkin_ws/src/mrs_msgs/: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  link_msg_files.sh  package.xml  rosdoc.yaml
daep/catkin_ws/src/mrs_msgs/.ci/: docs.sh
daep/catkin_ws/src/mrs_msgs/.github/workflows/: docs.yml
daep/catkin_ws/src/mrs_msgs/msg/: BoolStamped.msg  BumperStatus.msg  ConstraintManagerDiagnostics.msg  ControlError.msg  ControlManagerDiagnostics.msg  ControllerDiagnostics.msg  ControllerStatus.msg  CustomTopic.msg  DynamicsConstraints.msg  EstimationDiagnostics.msg  EstimatorCorrection.msg  EstimatorDiagnostics.msg  EstimatorInput.msg  EstimatorOutput.msg  EulerAngles.msg  Float64.msg  Float64ArrayStamped.msg  Float64MultiArrayStamped.msg  Float64Stamped.msg  FuturePoint.msg  FutureTrajectory.msg  GainManagerDiagnostics.msg  GazeboSpawnerDiagnostics.msg  GimbalState.msg  GpsData.msg  GripperDiagnostics.msg  Histogram.msg  HwApiAccelerationHdgCmd.msg  HwApiAccelerationHdgRateCmd.msg  HwApiActuatorCmd.msg  HwApiAltitude.msg  HwApiAttitudeCmd.msg  HwApiAttitudeRateCmd.msg  HwApiCapabilities.msg  HwApiControlGroupCmd.msg  HwApiPositionCmd.msg  HwApiRcChannels.msg  HwApiStatus.msg  HwApiVelocityHdgCmd.msg  HwApiVelocityHdgRateCmd.msg  (+36 more)
daep/catkin_ws/src/mrs_msgs/msg/bumper/: Histogram.msg  ObstacleSectors.msg
daep/catkin_ws/src/mrs_msgs/msg/general/: Float64MultiArrayStamped.msg  Float64Stamped.msg  ImageLabeled.msg  ImageLabeledArray.msg  PoseWithCovarianceArrayStamped.msg  PoseWithCovarianceIdentified.msg  Sphere.msg  StringStamped.msg  Track.msg  TrackArrayStamped.msg  TrackStamped.msg
daep/catkin_ws/src/mrs_msgs/msg/gimbal/: GimbalState.msg
daep/catkin_ws/src/mrs_msgs/msg/gnss/: GpsData.msg  RtkFixType.msg  RtkGps.msg
daep/catkin_ws/src/mrs_msgs/msg/hw_api/: HwApiAccelerationHdgCmd.msg  HwApiAccelerationHdgRateCmd.msg  HwApiActuatorCmd.msg  HwApiAltitude.msg  HwApiAttitudeCmd.msg  HwApiAttitudeRateCmd.msg  HwApiCapabilities.msg  HwApiControlGroupCmd.msg  HwApiPositionCmd.msg  HwApiRcChannels.msg  HwApiStatus.msg  HwApiVelocityHdgCmd.msg  HwApiVelocityHdgRateCmd.msg
daep/catkin_ws/src/mrs_msgs/msg/landoff_tracker/: LandoffDiagnostics.msg
daep/catkin_ws/src/mrs_msgs/msg/mpc_tracker/: FutureTrajectory.msg  MpcPredictionFullState.msg  MpcTrackerDiagnostics.msg
daep/catkin_ws/src/mrs_msgs/msg/mrs_gripper/: GripperDiagnostics.msg
daep/catkin_ws/src/mrs_msgs/msg/profiler/: ProfilerUpdate.msg
daep/catkin_ws/src/mrs_msgs/msg/se3_controller/: Se3Gains.msg
daep/catkin_ws/src/mrs_msgs/msg/speed_tracker/: SpeedTrackerCommand.msg
daep/catkin_ws/src/mrs_msgs/msg/stamped_msgs/: BoolStamped.msg  UInt16Stamped.msg
daep/catkin_ws/src/mrs_msgs/msg/trajectory_generation/: Path.msg  PathWithVelocity.msg  ReferenceWithVelocity.msg
daep/catkin_ws/src/mrs_msgs/msg/uav_managers/: BumperStatus.msg  ConstraintManagerDiagnostics.msg  ControlError.msg  ControlManagerDiagnostics.msg  ControllerDiagnostics.msg  DynamicsConstraints.msg  EstimationDiagnostics.msg  EstimatorCorrection.msg  EstimatorInput.msg  EulerAngles.msg  GainManagerDiagnostics.msg  PathReference.msg  Reference.msg  ReferenceList.msg  ReferenceStamped.msg  TrackerCommand.msg  TrackerStatus.msg  TrajectoryReference.msg  UavManagerDiagnostics.msg  UavState.msg  VelocityReference.msg  VelocityReferenceStamped.msg
daep/catkin_ws/src/mrs_msgs/msg/uav_status/: CustomTopic.msg  NodeCpuLoad.msg  UavStatus.msg  UavStatusShort.msg
daep/catkin_ws/src/mrs_msgs/src/: main.cpp
daep/catkin_ws/src/mrs_msgs/srv/: BumperParamsSrv.srv  ConstraintsOverride.srv  DynamicsConstraintsSrv.srv  Float64Srv.srv  Float64StampedSrv.srv  GetFloat64.srv  GetPathSrv.srv  PathSrv.srv  ReferenceSrv.srv  ReferenceStampedSrv.srv  SetInt.srv  String.srv  TrajectoryReferenceSrv.srv  TransformPoseSrv.srv  TransformReferenceSrv.srv  TransformVector3Srv.srv  ValidateReference.srv  ValidateReferenceList.srv  Vec1.srv  Vec4.srv  VelocityReferenceSrv.srv  VelocityReferenceStampedSrv.srv
daep/catkin_ws/src/mrs_msgs/srv/general/: Float64Srv.srv  Float64StampedSrv.srv  GetFloat64.srv  SetInt.srv  String.srv  Vec1.srv
daep/catkin_ws/src/mrs_msgs/srv/trajectory_generation/: GetPathSrv.srv  PathSrv.srv
daep/catkin_ws/src/mrs_msgs/srv/uav_managers/: BumperParamsSrv.srv  ConstraintsOverride.srv  DynamicsConstraintsSrv.srv  ReferenceSrv.srv  ReferenceStampedSrv.srv  TrajectoryReferenceSrv.srv  TransformPoseSrv.srv  TransformReferenceSrv.srv  TransformVector3Srv.srv  ValidateReference.srv  ValidateReferenceList.srv  VelocityReferenceSrv.srv  VelocityReferenceStampedSrv.srv
dep/: .bashrc  exploration.sh  fix_nlopt.sh  run_dep.sh  save_octomap.sh  simulation.sh  voxblox.sh
dep/.rviz/: persistent_settings
dep_r_granso2/dep_granso2_dynamic_0/: coverage.csv  logfile.csv
dep_r_granso2/dep_granso2_dynamic_1/: collision.csv  coverage.csv  intervals.csv  logfile.csv
dep_r_granso2/dep_granso2_dynamic_2/: collision.csv  coverage.csv  intervals.csv  logfile.csv
dep_r_granso2/dep_granso2_dynamic_3/: coverage.csv  logfile.csv
dep_r_granso2/dep_granso2_dynamic_4/: coverage.csv  logfile.csv
dep_r_granso2/dep_granso2_dynamic_5/: collision.csv  coverage.csv  intervals.csv  logfile.csv
dep_r_granso2/dep_granso2_dynamic_6/: collision.csv  coverage.csv  intervals.csv  logfile.csv
dep_r_granso2/dep_granso2_dynamic_7/: collision.csv  coverage.csv  intervals.csv  logfile.csv
dep_r_granso2/dep_granso2_dynamic_8/: collision.csv  coverage.csv  intervals.csv  logfile.csv
dep_r_granso2/dep_granso2_dynamic_9/: coverage.csv  logfile.csv
images/aep_dep/: Dockerfile
nbvp_dep/: exploration.sh  exploration_completed.sh  save_octomap.sh  simulation.sh
visualization/: .python_history  visualize.py
(+2132 files in other folders)
